collabora.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: collabora
  namespace: nextcloud
  labels:
    app: collabora
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: collabora
  template:
    metadata:
      labels:
        app: collabora
    spec:
      containers:
        - name: collabora
          image: collabora/code:24.04.9.2.1
          ports:
            - containerPort: 9980
              name: collabora
          resources:
            requests:
              cpu: 500m
              memory: 2Gi
            limits:
              cpu: 2000m
              memory: 4Gi          
          securityContext:
            capabilities:
              add:
                - MKNOD
---
apiVersion: v1
kind: Service
metadata:
  name: collabora
  namespace: nextcloud
  labels:
    app: collabora
spec:
  type: ClusterIP
  selector:
    app: collabora
  ports:
    - name: collabora
      port: 9980
      targetPort: 9980
