mariadb-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb-headless
  namespace: nextcloud
spec:
  clusterIP: None
  selector:
    app: mariadb
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
