nextcloud.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      containers:
        - name: nextcloud
          image: nextcloud:31.0.4-apache
          ports:
            - containerPort: 80
          volumeMounts:
            - name: html
              mountPath: /var/www/html
            - name: collabora-config
              mountPath: /var/www/html/config/collabora.config.php
              subPath: collabora.config.php          
          livenessProbe:
            httpGet:
              path: /status.php
              port: 80
              httpHeaders:
                - name: Host
                  value: "nextcloud.ewe-netz-backup.de"
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3          
          readinessProbe:
            httpGet:
              path: /status.php
              port: 80
              httpHeaders:
                - name: Host
                  value: "nextcloud.ewe-netz-backup.de"
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3          
          resources:
            requests:
              cpu: 100m
              memory: 2Gi
            limits:
              cpu: 2000m
              memory: 4Gi      
      volumes:
        - name: html
          persistentVolumeClaim:
            claimName: nextcloud-html
        - name: collabora-config
          configMap:
            name: nextcloud-config
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  type: ClusterIP  
  selector:
    app: nextcloud
  ports:
    - port: 80
      targetPort: 80
